# Fossil

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  weekly.yml
config/: .env.example
data/normalized/: ByteByteGoHq__system-design-101.json  ByteByteGoHq__system-design-101_classification.json  CodeByZach__pace.json  CodeByZach__pace_classification.json  CompVis__stable-diffusion.json  CompVis__stable-diffusion_classification.json  CyC2018__CS-Notes.json  GrowingGit__GitHub-Chinese-Top-Charts.json  GrowingGit__GitHub-Chinese-Top-Charts_classification.json  PanJiaChen__vue-element-admin.json  PanJiaChen__vue-element-admin_classification.json  Rudrabha__Wav2Lip.json  Rudrabha__Wav2Lip_classification.json  TypeStrong__ts-node.json  TypeStrong__ts-node_classification.json  animate-css__animate.css.json  animate-css__animate.css_classification.json  answershuto__learnVue.json  answershuto__learnVue_classification.json  anthropics__courses.json  anthropics__courses_classification.json  chiraggude__awesome-laravel.json  chiraggude__awesome-laravel_classification.json  datastacktv__data-engineer-roadmap.json  datastacktv__data-engineer-roadmap_classification.json  deepseek-ai__DeepSeek-R1.json  deepseek-ai__DeepSeek-R1_classification.json  dennybritz__reinforcement-learning.json  dennybritz__reinforcement-learning_classification.json  eligrey__FileSaver.js.json  eligrey__FileSaver.js_classification.json  fighting41love__funNLP.json  fighting41love__funNLP_classification.json  (+45 more)
src/fossil/api/: client.py  (+1 more)
tests/: conftest.py
(+87 files in other folders)
