[project]
name = "fossil"
version = "0.1.0"
description = "Digital Archaeology for Open Source - automated autopsy reports for abandoned GitHub repositories."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.4",
    "jinja2>=3.1",
]

[project.scripts]
fossil = "fossil.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fossil"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["fossil"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.20",
    "types-python-dateutil>=2.9.0.20260518",
]
